--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,10 +33,13 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  flutter_localizations:
+    sdk: flutter
   cupertino_icons: ^1.0.2
   http: ^0.13.3
 
 dev_dependencies:
+  intl: ^0.17.0
   flutter_test:
     sdk: flutter
 
